--- a/docs/2026-02-25-TODO.md
+++ b/docs/2026-02-25-TODO.md
@@ -2,21 +2,21 @@
 
 ## backend
 
-- [ ] fixa "orders"-endpoint:en så att man kan lägga en order
-- [ ] dubbelkolla att alla endpoints fungerar som de ska utan curl
-- [ ] skapa sökfunktionalitet, kanske med url-parametrar
-- [ ] bryta ut sever-endpoints:en till controllers och routes
+- [x] ~~fixa "orders"-endpoint:en så att man kan lägga en order~~
+- [ ] ~~dubbelkolla att alla endpoints fungerar som de ska utan curl~~
+- [n+s] skapa sökfunktionalitet, kanske med url-parametrar
+- [j] bryta ut sever-endpoints:en till controllers och routes
 
 ## databas
 
 - [ ] se över och fixa våra constraints i databasen
-    - [ ] lägg till 0 som default-värde för products.stock_quantity, products.listing_price med mera
-    - kolla över cascade-funktionaliteten så att man kan DELETE:a produkter som finns i en order, typ SET NULL
-    - lägg till username i "customers"-tabellen så att man kan ha den som route param i url:en
-    - lägg till en "discounts"-tabell i databasen och referera till den i "orders"-tabellen (N:1)
+  - [ ] lägg till 0 som default-värde för products.stock_quantity, products.listing_price med mera
+  - [ ] kolla över cascade-funktionaliteten så att man kan DELETE:a produkter som finns i en order, typ SET NULL
+  - [ ] lägg till username i "customers"-tabellen så att man kan ha den som route param i url:en
+  - [?] ~~lägg till en "discounts"-tabell i databasen och referera till den i "orders"-tabellen (N:1)~~
 
 ## frontend
 
-- fixa produktbilder via api
-- kolla så att vå test-html funkar för alla i chrome
-- anpassa NeonMarket-frontend:en till "Webshop Najs"
+- [ ] fixa produktbilder via api
+- [x] kolla så att vår test-html funkar för alla i chrome
+- [ ] anpassa NeonMarket-frontend:en till "Webshop Najs"
